--- a/reviews.html
+++ b/reviews.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>eczema exorcist</title>
+  <title>Document</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <div id="navbar"></div>
 
-  <!-- load navbar w javascript (change w React) -->
   <script>
     fetch("/navbar.html")
       .then(res => res.text())
@@ -20,21 +19,7 @@
       });
   </script>
 
-  <!-- Hero -->
-  <section class="hero">
-    <div class="container">
-      <div class="hero-content">
-        <h1 class="hero-heading text-xxl">
-          header
-        </h1>
-        <p class="hero-text">
-          text
-        </p>
-      </div>
-    </div>
-  </section>
 
-  <script src="js/main.js"></script>
 </body>
 
 </html>
