Fix code causing issue with github pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- load navbar w javascript (change w React) -->
   <script>
-    fetch("/navbar.html")
+    fetch("navbar.html")
       .then(res => res.text())
       .then(html => {
         document.getElementById("navbar").innerHTML = html;
