Fix code issue with github pages pt 2

--- a/reviews.html
+++ b/reviews.html
@@ -12,7 +12,7 @@
   <div id="navbar"></div>
 
   <script>
-    fetch("/navbar.html")
+    fetch("navbar.html")
       .then(res => res.text())
       .then(html => {
         document.getElementById("navbar").innerHTML = html;
