--- a/navbar.html
+++ b/navbar.html
@@ -1,41 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+<nav class="navbar">
+  <div class="container">
+    <div class="logo">
+      <a href="index.html">
+        <!-- <img src="images/" > -->
+      </a>
+    </div>
+  </div>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-
-<body>
-  <nav class="navbar">
-    <div class="container">
-      <div class="logo">
-        <a href="index.html">
-          <!-- <img src="images/" > -->
+  <div class="main-menu">
+    <ul>
+      <li>
+        <a href="index.html">Home</a>
+      </li>
+      <li>
+        <a href="about-us.html">About Us</a>
+      </li>
+      <li>
+        <a href="reviews.html">Reviews</a>
+      </li>
+      <li>
+        <a class="btn" href="#">
+          <i class="fas fa-user"></i> Log In
         </a>
-      </div>
-    </div>
-
-    <div class="main-menu">
-      <ul>
-        <li>
-          <a href="index.html">Home</a>
-        </li>
-        <li>
-          <a href="#">About Us</a>
-        </li>
-        <li>
-          <a href="reviews.html">Reviews</a>
-        </li>
-        <li>
-          <a class="btn" href="#">
-            <i class="fas fa-user"></i> Log In
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</body>
-
-</html>
+      </li>
+    </ul>
+  </div>
+</nav>
