Styled footer and navbar

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer bg-black">
+<footer class="footer bg-dark">
   <div class="container">
     <div class="footer-grid">
       <div>
@@ -12,7 +12,7 @@
           </p>
           <form>
             <input type="email" id="email" placeholder="Enter your email">
-            <button type="submit" class="" btn btn-primary btn-block>Subscribe</button>
+            <button type="submit" class="btn btn-primary btn-block">Subscribe</button>
           </form>
         </div>
         <i class="fab fa-linkedin"></i>
@@ -20,7 +20,7 @@
       <div>
         <h4>Coompany</h4>
         <ul>
-          <li><a href="#">About Us</a></li>
+          <li><a href="about-us.html">About Us</a></li>
           <li><a href="#">Our Process</a></li>
           <li><a href="#">Join Our Team</a></li>
         </ul>
