--- a/navbar.html
+++ b/navbar.html
@@ -2,27 +2,27 @@
   <div class="container">
     <div class="logo">
       <a href="index.html">
-        <!-- <img src="images/" > -->
+        <img src="images/logo.png" alt="logo">
       </a>
     </div>
-  </div>
 
-  <div class="main-menu">
-    <ul>
-      <li>
-        <a href="index.html">Home</a>
-      </li>
-      <li>
-        <a href="about-us.html">About Us</a>
-      </li>
-      <li>
-        <a href="reviews.html">Reviews</a>
-      </li>
-      <li>
-        <a class="btn" href="#">
-          <i class="fas fa-user"></i> Log In
-        </a>
-      </li>
-    </ul>
+    <div class="main-menu">
+      <ul>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="about-us.html">About Us</a>
+        </li>
+        <li>
+          <a href="reviews.html">Reviews</a>
+        </li>
+        <li>
+          <a class="btn" href="#">
+            <i class="fas fa-user"></i> Log In
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
